complete build fixes